spacing fixed for collection items

--- a/src/pages/Article/Article.css
+++ b/src/pages/Article/Article.css
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
  .Article-Top {
